# brest-rag

./: .env.template  README.md  main.py  pyproject.toml
src/: generate.py  guardrail.py  rag_brest.py  reformulate.py  rerank.py  retrieve.py  script_ingestion.py
