[project]
name = "brest-rag"
version = "0.1.0"
description = "Projet Open Source de RAG sur le pays de Brest développer par la communauté des Workshop IA du Finist'AI Club"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.12.0",
    "flashrank>=0.2.10",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.2.1",
]
